Opened 15 years ago

Closed 15 years ago

Last modified 14 years ago

#532 closed defect (fixed)

Assertion in h264_refs.c still fails

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: h264 crash abort
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Reported by redeemarr in ticket #407:

$ ffmpeg -i assert2.h264
ffmpeg version N-33271-g171a5b5, Copyright (c) 2000-2011 the FFmpeg developers
  built on Oct  4 2011 18:09:28 with gcc 4.5.3
  configuration: --cc='/usr/local/gcc-4.5.3/bin/gcc -m32'
  libavutil    51. 19. 0 / 51. 19. 0
  libavcodec   53. 19. 0 / 53. 19. 0
  libavformat  53. 13. 0 / 53. 13. 0
  libavdevice  53.  4. 0 / 53.  4. 0
  libavfilter   2. 43. 6 /  2. 43. 6
  libswscale    2.  1. 0 /  2.  1. 0
[h264 @ 0x8ccfd00] non-existing PPS 2 referenced
[h264 @ 0x8ccfd00] decode_slice_header error
[h264 @ 0x8ccfd00] insane cropping not completely supported, this could look slightly wrong ... (left: 0, top: 6)
    Last message repeated 1 times
[h264 @ 0x8ccfd00] Missing reference picture
[h264 @ 0x8ccfd00] decode_slice_header error
[h264 @ 0x8ccfd00] mmco: unref short failure
Assertion h->long_ref_count + h->short_ref_count <= h->sps.ref_frame_count failed at libavcodec/h264_refs.c:482
Aborted

Attachments (1)

assert2.h264 (12.9 KB ) - added by Carl Eugen Hoyos 15 years ago.

Download all attachments as: .zip

Change History (3)

by Carl Eugen Hoyos, 15 years ago

Attachment: assert2.h264 added

comment:1 by Michael Niedermayer, 15 years ago

Resolution: fixed
Status: newclosed

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: h264 crash abort added
Note: See TracTickets for help on using tickets.