h264: remove assert() on ref_frame_count.

This assert can fail if a SPS with a smaller value becomes active.
Fixes Ticket532

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>